--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - "3.4"
   - "3.5"
+  before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
